--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.url=jdbc:h2:mem:User
 #jpa
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
